--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/jspdf": "^1.3.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.2",
-    "next": "^16.1.1",
+    "next": "^16.0.7",
+    "openai": "^6.16.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
